es-derive2-test/tests/ui/errors/awaited_set_named_fields.rs
// Error: Variants must use newtype pattern (single unnamed field)
#[derive(es_derive2::AwaitedSet)]
pub enum BadResponse {
    Success { data: String },  // Named fields not allowed
}

fn main() {}
